# command_line_interface

./: README.md
cli-tutorial/: output.xlsx  pyproject.toml
cli-tutorial/cli_tutorial/: baza.py  cli.py  outtest.xlsx  vol_per_year.csv  zip_with_password.py
cli-tutorial/cli_tutorial/dev/: outfile_1614769566.772766.xlsx  outfile_1614769616.930985.xlsx  outfile_1614772449.161415.xlsx  outfile_1614839663.45337.xlsx  outfile_1614840387.071352.xlsx
cli-tutorial/cli_tutorial/prod/: outfile_1614862035.63275.xlsx
