[tool.poetry]
name = "cli-tutorial"
version = "0.1.0"
description = ""
authors = ["RGAV42A"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
funcy = "^1.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
